added layout style

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,3 +1,7 @@
 body {
     background-color: #b71b1b;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
